[package]
name = "chucknorris_rs"
version = "0.1.0"
authors = ["graves501"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.9", features = ["json", "blocking"] }
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
