[package]
name = "chucknorris_rs"
version = "0.1.0"
authors = ["graves501"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
tokio = { version = "1.19.2", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0.57"
