[package]
name = "norris"
version = "0.1.3"
authors = ["graves501"]
edition = "2021"
description = "Simple async wrapper for the Chuck Norris Joke API: https://api.chucknorris.io/"
license = "MIT"
license_file = "LICENSE"
repository = "https://github.com/graves501/chucknorris_rs"
readme = "README.md"
keywords = ["funny","joke","chuck", "norris", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.68"

strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
